atlas connection